# StockScreener

./: .gitignore  README.md  check_company_listings.py  check_details.py  check_kse.py  check_mexico.py  check_wiki_tables.py  default.json  gui.py  main.py  pyproject.toml  release-github.sh  requirements.txt
.github/workflows/: build.yml
screener/: config.py  fetcher.py  filters.py  indices.py  models.py  providers.py
